--- a/src/index.html
+++ b/src/index.html
@@ -40,29 +40,33 @@
         </div>
       </header>
 
-      <hr>
+      <hr />
 
       <main class="mt-5">
         <div class="col col-md-6">
           <table class="table table-striped">
             <thead>
-                <tr>
-                    <th>Név</th>
-                    <th>Méret (cm)</th>
-                    <th>Ár</th>
-                    <th>Személyek száma</th>
-                    <th>Utánfutó</th>
-                </tr>
+              <tr>
+                <th>Név</th>
+                <th>Méret (cm)</th>
+                <th>Ár</th>
+                <th>Személyek száma</th>
+                <th>Utánfutó</th>
+              </tr>
             </thead>
             <tbody id="tbody"></tbody>
           </table>
         </div>
       </main>
-
-      <footer class="position-absolute bottom-0">
-        <p><u>Egy rövid idézet:</u> A sikertől nem kell félni, de szégyellni sem szabad. Ha valakinek sikere van, az azért van, mert valamilyen módon örömet szerez az embereknek.</p>
-      </footer>
     </div>
+
+    <footer class="text-center pt-3 position-absolute bottom-0 bg-warning bg-gradient">
+      <p>
+        <u>Egy rövid idézet:</u> A sikertől nem kell félni, de szégyellni sem
+        szabad. Ha valakinek sikere van, az azért van, mert valamilyen módon
+        örömet szerez az embereknek.
+      </p>
+    </footer>
 
     <script src="js/bootstrap.js"></script>
     <script src="app.js"></script>
