Made the citatum look better

--- a/src/index.html
+++ b/src/index.html
@@ -62,9 +62,9 @@
 
     <footer class="text-center pt-3 position-absolute bottom-0 bg-warning bg-gradient">
       <p>
-        <u>Egy rövid idézet:</u> A sikertől nem kell félni, de szégyellni sem
+        <u>Egy rövid idézet:</u> <span class="idezet">A sikertől nem kell félni, de szégyellni sem
         szabad. Ha valakinek sikere van, az azért van, mert valamilyen módon
-        örömet szerez az embereknek.
+        örömet szerez az embereknek.</span>
       </p>
     </footer>
 
